fix(website): correct small layout bugs

--- a/website/builder/css/docs.css
+++ b/website/builder/css/docs.css
@@ -69,7 +69,6 @@ blockquote {
   margin: 0;
   display: flex;
   list-style-type: none;
-  height: 100%;
   align-items: stretch;
 }
 
@@ -319,7 +318,8 @@ blockquote {
   }
 
   .docs-doc-content {
-    padding: 0 20px;
+    padding-left: 20px;
+    padding-right: 20px;
     margin: auto;
   }
 
